all: update dependecies
