# example/pets/ent/openapi.json
@@ -323,91 +323,6 @@
             "$ref": "#/components/responses/500"
           }
         }
-      },
-      "post": {
-        "tags": [
-          "Category"
-        ],
-        "summary": "Create a new Pet and attach it to the Category",
-        "description": "Creates a new Pet and attaches it to the Category",
-        "operationId": "createCategoryPets",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "ID of the Category",
-            "schema": {
-              "type": "integer"
-            },
-            "required": true
-          }
-        ],
-        "requestBody": {
-          "description": "Pet to create",
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "name": {
-                    "type": "string"
-                  },
-                  "weight": {
-                    "type": "integer"
-                  },
-                  "birthday": {
-                    "type": "string",
-                    "format": "date-time"
-                  },
-                  "categories": {
-                    "type": "array",
-                    "items": {
-                      "type": "integer"
-                    }
-                  },
-                  "owner": {
-                    "type": "integer"
-                  },
-                  "friends": {
-                    "type": "array",
-                    "items": {
-                      "type": "integer"
-                    }
-                  }
-                },
-                "required": [
-                  "name",
-                  "owner"
-                ]
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "Pet created and attached to the Category",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Category_PetsCreate"
-                }
-              }
-            }
-          },
-          "400": {
-            "$ref": "#/components/responses/400"
-          },
-          "404": {
-            "$ref": "#/components/responses/404"
-          },
-          "409": {
-            "$ref": "#/components/responses/409"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
-          }
-        }
       }
     },
     "/db-health": {
@@ -775,74 +690,6 @@
             "$ref": "#/components/responses/500"
           }
         }
-      },
-      "post": {
-        "tags": [
-          "Pet"
-        ],
-        "summary": "Create a new Category and attach it to the Pet",
-        "description": "Creates a new Category and attaches it to the Pet",
-        "operationId": "createPetCategories",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "ID of the Pet",
-            "schema": {
-              "type": "integer"
-            },
-            "required": true
-          }
-        ],
-        "requestBody": {
-          "description": "Category to create",
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "name": {
-                    "type": "string"
-                  },
-                  "pets": {
-                    "type": "array",
-                    "items": {
-                      "type": "integer"
-                    }
-                  }
-                },
-                "required": [
-                  "name"
-                ]
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "Category created and attached to the Pet",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Pet_CategoriesCreate"
-                }
-              }
-            }
-          },
-          "400": {
-            "$ref": "#/components/responses/400"
-          },
-          "404": {
-            "$ref": "#/components/responses/404"
-          },
-          "409": {
-            "$ref": "#/components/responses/409"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
-          }
-        }
       }
     },
     "/pets/{id}/friends": {
@@ -907,91 +754,6 @@
             "$ref": "#/components/responses/500"
           }
         }
-      },
-      "post": {
-        "tags": [
-          "Pet"
-        ],
-        "summary": "Create a new Pet and attach it to the Pet",
-        "description": "Creates a new Pet and attaches it to the Pet",
-        "operationId": "createPetFriends",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "ID of the Pet",
-            "schema": {
-              "type": "integer"
-            },
-            "required": true
-          }
-        ],
-        "requestBody": {
-          "description": "Pet to create",
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "name": {
-                    "type": "string"
-                  },
-                  "weight": {
-                    "type": "integer"
-                  },
-                  "birthday": {
-                    "type": "string",
-                    "format": "date-time"
-                  },
-                  "categories": {
-                    "type": "array",
-                    "items": {
-                      "type": "integer"
-                    }
-                  },
-                  "owner": {
-                    "type": "integer"
-                  },
-                  "friends": {
-                    "type": "array",
-                    "items": {
-                      "type": "integer"
-                    }
-                  }
-                },
-                "required": [
-                  "name",
-                  "owner"
-                ]
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "Pet created and attached to the Pet",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Pet_FriendsCreate"
-                }
-              }
-            }
-          },
-          "400": {
-            "$ref": "#/components/responses/400"
-          },
-          "404": {
-            "$ref": "#/components/responses/404"
-          },
-          "409": {
-            "$ref": "#/components/responses/409"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
-          }
-        }
       }
     },
     "/pets/{id}/owner": {
@@ -1023,114 +785,6 @@
                 }
               }
             }
-          },
-          "400": {
-            "$ref": "#/components/responses/400"
-          },
-          "404": {
-            "$ref": "#/components/responses/404"
-          },
-          "409": {
-            "$ref": "#/components/responses/409"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "Pet"
-        ],
-        "summary": "Create a new User and attach it to the Pet",
-        "description": "Creates a new User and attaches it to the Pet",
-        "operationId": "createPetOwner",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "ID of the Pet",
-            "schema": {
-              "type": "integer"
-            },
-            "required": true
-          }
-        ],
-        "requestBody": {
-          "description": "User to create",
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "name": {
-                    "type": "string"
-                  },
-                  "age": {
-                    "type": "integer"
-                  },
-                  "pets": {
-                    "type": "array",
-                    "items": {
-                      "type": "integer"
-                    }
-                  }
-                },
-                "required": [
-                  "name",
-                  "age"
-                ]
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "User created and attached to the Pet",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Pet_OwnerCreate"
-                }
-              }
-            }
-          },
-          "400": {
-            "$ref": "#/components/responses/400"
-          },
-          "404": {
-            "$ref": "#/components/responses/404"
-          },
-          "409": {
-            "$ref": "#/components/responses/409"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "Pet"
-        ],
-        "summary": "Delete the attached Owner",
-        "description": "Delete the attached Owner of the Pet with the given ID",
-        "operationId": "deletePetOwner",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "ID of the Pet",
-            "schema": {
-              "type": "integer"
-            },
-            "required": true
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "Owner with requested ID was deleted"
           },
           "400": {
             "$ref": "#/components/responses/400"
@@ -1471,91 +1125,6 @@
             "$ref": "#/components/responses/500"
           }
         }
-      },
-      "post": {
-        "tags": [
-          "User"
-        ],
-        "summary": "Create a new Pet and attach it to the User",
-        "description": "Creates a new Pet and attaches it to the User",
-        "operationId": "createUserPets",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "ID of the User",
-            "schema": {
-              "type": "integer"
-            },
-            "required": true
-          }
-        ],
-        "requestBody": {
-          "description": "Pet to create",
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "name": {
-                    "type": "string"
-                  },
-                  "weight": {
-                    "type": "integer"
-                  },
-                  "birthday": {
-                    "type": "string",
-                    "format": "date-time"
-                  },
-                  "categories": {
-                    "type": "array",
-                    "items": {
-                      "type": "integer"
-                    }
-                  },
-                  "owner": {
-                    "type": "integer"
-                  },
-                  "friends": {
-                    "type": "array",
-                    "items": {
-                      "type": "integer"
-                    }
-                  }
-                },
-                "required": [
-                  "name",
-                  "owner"
-                ]
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "Pet created and attached to the User",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/User_PetsCreate"
-                }
-              }
-            }
-          },
-          "400": {
-            "$ref": "#/components/responses/400"
-          },
-          "404": {
-            "$ref": "#/components/responses/404"
-          },
-          "409": {
-            "$ref": "#/components/responses/409"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
-          }
-        }
       }
     }
   },
@@ -1635,28 +1204,6 @@
           },
           "name": {
             "type": "string"
-          }
-        },
-        "required": [
-          "id",
-          "name"
-        ]
-      },
-      "Category_PetsCreate": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer"
-          },
-          "name": {
-            "type": "string"
-          },
-          "weight": {
-            "type": "integer"
-          },
-          "birthday": {
-            "type": "string",
-            "format": "date-time"
           }
         },
         "required": [
@@ -1856,21 +1403,6 @@
           "name"
         ]
       },
-      "Pet_CategoriesCreate": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer"
-          },
-          "name": {
-            "type": "string"
-          }
-        },
-        "required": [
-          "id",
-          "name"
-        ]
-      },
       "Pet_CategoriesList": {
         "type": "object",
         "properties": {
@@ -1879,28 +1411,6 @@
           },
           "name": {
             "type": "string"
-          }
-        },
-        "required": [
-          "id",
-          "name"
-        ]
-      },
-      "Pet_FriendsCreate": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer"
-          },
-          "name": {
-            "type": "string"
-          },
-          "weight": {
-            "type": "integer"
-          },
-          "birthday": {
-            "type": "string",
-            "format": "date-time"
           }
         },
         "required": [
@@ -1928,25 +1438,6 @@
         "required": [
           "id",
           "name"
-        ]
-      },
-      "Pet_OwnerCreate": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer"
-          },
-          "name": {
-            "type": "string"
-          },
-          "age": {
-            "type": "integer"
-          }
-        },
-        "required": [
-          "id",
-          "name",
-          "age"
         ]
       },
       "Pet_OwnerRead": {
@@ -2067,28 +1558,6 @@
           "id",
           "name",
           "age"
-        ]
-      },
-      "User_PetsCreate": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer"
-          },
-          "name": {
-            "type": "string"
-          },
-          "weight": {
-            "type": "integer"
-          },
-          "birthday": {
-            "type": "string",
-            "format": "date-time"
-          }
-        },
-        "required": [
-          "id",
-          "name"
         ]
       },
       "User_PetsList": {
