# internal/integration/ogent/ent/ogent/oas_server_gen.go
@@ -29,6 +29,7 @@ import (
 	"github.com/ogen-go/ogen/uri"
 	"github.com/ogen-go/ogen/validate"
 	"go.opentelemetry.io/otel"
+	"go.opentelemetry.io/otel/codes"
 	"go.opentelemetry.io/otel/metric"
 	"go.opentelemetry.io/otel/trace"
 )
@@ -62,6 +63,7 @@ var (
 	_ = regexp.MustCompile
 	_ = jx.Null
 	_ = sync.Pool{}
+	_ = codes.Unset
 )
 
 // Handler handles operations described by OpenAPI v3 specification.
@@ -72,54 +74,18 @@ type Handler interface {
 	//
 	// POST /categories
 	CreateCategory(ctx context.Context, req CreateCategoryReq) (CreateCategoryRes, error)
-	// CreateCategoryPets implements createCategoryPets operation.
-	//
-	// Creates a new Pet and attaches it to the Category.
-	//
-	// POST /categories/{id}/pets
-	CreateCategoryPets(ctx context.Context, req CreateCategoryPetsReq, params CreateCategoryPetsParams) (CreateCategoryPetsRes, error)
 	// CreatePet implements createPet operation.
 	//
 	// Creates a new Pet and persists it to storage.
 	//
 	// POST /pets
 	CreatePet(ctx context.Context, req CreatePetReq) (CreatePetRes, error)
-	// CreatePetCategories implements createPetCategories operation.
-	//
-	// Creates a new Category and attaches it to the Pet.
-	//
-	// POST /pets/{id}/categories
-	CreatePetCategories(ctx context.Context, req CreatePetCategoriesReq, params CreatePetCategoriesParams) (CreatePetCategoriesRes, error)
-	// CreatePetFriends implements createPetFriends operation.
-	//
-	// Creates a new Pet and attaches it to the Pet.
-	//
-	// POST /pets/{id}/friends
-	CreatePetFriends(ctx context.Context, req CreatePetFriendsReq, params CreatePetFriendsParams) (CreatePetFriendsRes, error)
-	// CreatePetOwner implements createPetOwner operation.
-	//
-	// Creates a new User and attaches it to the Pet.
-	//
-	// POST /pets/{id}/owner
-	CreatePetOwner(ctx context.Context, req CreatePetOwnerReq, params CreatePetOwnerParams) (CreatePetOwnerRes, error)
 	// CreateUser implements createUser operation.
 	//
 	// Creates a new User and persists it to storage.
 	//
 	// POST /users
 	CreateUser(ctx context.Context, req CreateUserReq) (CreateUserRes, error)
-	// CreateUserBestFriend implements createUserBestFriend operation.
-	//
-	// Creates a new User and attaches it to the User.
-	//
-	// POST /users/{id}/best-friend
-	CreateUserBestFriend(ctx context.Context, req CreateUserBestFriendReq, params CreateUserBestFriendParams) (CreateUserBestFriendRes, error)
-	// CreateUserPets implements createUserPets operation.
-	//
-	// Creates a new Pet and attaches it to the User.
-	//
-	// POST /users/{id}/pets
-	CreateUserPets(ctx context.Context, req CreateUserPetsReq, params CreateUserPetsParams) (CreateUserPetsRes, error)
 	// DeleteCategory implements deleteCategory operation.
 	//
 	// Deletes the Category with the requested ID.
@@ -132,24 +98,12 @@ type Handler interface {
 	//
 	// DELETE /pets/{id}
 	DeletePet(ctx context.Context, params DeletePetParams) (DeletePetRes, error)
-	// DeletePetOwner implements deletePetOwner operation.
-	//
-	// Delete the attached Owner of the Pet with the given ID.
-	//
-	// DELETE /pets/{id}/owner
-	DeletePetOwner(ctx context.Context, params DeletePetOwnerParams) (DeletePetOwnerRes, error)
 	// DeleteUser implements deleteUser operation.
 	//
 	// Deletes the User with the requested ID.
 	//
 	// DELETE /users/{id}
 	DeleteUser(ctx context.Context, params DeleteUserParams) (DeleteUserRes, error)
-	// DeleteUserBestFriend implements deleteUserBestFriend operation.
-	//
-	// Delete the attached BestFriend of the User with the given ID.
-	//
-	// DELETE /users/{id}/best-friend
-	DeleteUserBestFriend(ctx context.Context, params DeleteUserBestFriendParams) (DeleteUserBestFriendRes, error)
 	// ListCategory implements listCategory operation.
 	//
 	// List Categories.
